--- a/객체지향의_사실과_오해_1챕터.md
+++ b/객체지향의_사실과_오해_1챕터.md
@@ -7,6 +7,7 @@
 ![](https://velog.velcdn.com/images/yjkang/post/0f56c337-41ff-42c9-b9fd-1a36daf9d6f5/image.png)
 
 양시영 튜터님께 추천 받은 책을 읽고, 내용을 정리해 하영님과 스터디하기로 했다.
+
 종이책으로 사려고 했지만, 스터디 일정 상 직접 구매하거나 배송 받는 것은 시간이 부족할 것 같아 예스24에서 이북으로 구매했다.
 
 <br>
@@ -15,11 +16,16 @@
 
 ![](https://velog.velcdn.com/images/yjkang/post/bf173847-8e5e-4bc7-b0dc-bf3b52d2bbd7/image.png)
 >2024년 12월 31일 화요일 1챕터 → 1
-2025년 01월 01일 수요일 2챕터 → 3
-2025년 01월 02일 목요일 1챕터 → 4
-2025년 01월 03일 금요일 1챕터 → 5
-2025년 01월 05일 일요일 2챕터 → 7
-2025년 01월 06일 월요일 1챕터 → 7 + 부록 포함
+> 
+> 2025년 01월 01일 수요일 2챕터 → 3
+> 
+> 2025년 01월 02일 목요일 1챕터 → 4
+> 
+> 2025년 01월 03일 금요일 1챕터 → 5
+> 
+> 2025년 01월 05일 일요일 2챕터 → 7
+> 
+> 2025년 01월 06일 월요일 1챕터 → 7 + 부록 포함
 
 \- 2025년 1월 1일 수요일 스터디 일정
 
@@ -32,18 +38,27 @@
 
 # 1. 협력하는 객체들의 공동체
 >객체지향이란 실세계를 직접적이고 직관적으로 모델링할 수 있는 패러다임.
-→ 객체지향 프로그래밍이란 현실 속에 존재하는 사물을 최대한 유사하게 모방해 소프트웨어 내부로 옮겨오는 작업.
-그 결과물인 **`객체지향 소프트웨어`**는 `실세계의 투영`,
-**`객체`**란 `현실 세계에 존재하는 사물에 대한 추상화`
+> 
+> → 객체지향 프로그래밍이란 현실 속에 존재하는 사물을 최대한 유사하게 모방해 소프트웨어 내부로 옮겨오는 작업.
+> 
+> 그 결과물인 **`객체지향 소프트웨어`**는 `실세계의 투영`,
+> 
+> **`객체`**란 `현실 세계에 존재하는 사물에 대한 추상화`
 
 - **객체지향의 목표**:
+
   실세계를 모방하는 것 (X)
+
   새로운 세계를 창조하는 것 (O)
 
 - 실세계의 모방이라는 개념이 비현실적임에도 많은 이들이 `실세계의 객체`와 `소프트웨어 객체` 간의 대응이라는 과거의 유산을 반복적으로 재생산하는 이유
-  : 실세계에 대한 비유가 객체지향의 다양한 측면을 이해하고 학습하는 데 매우 효과적이기 때문.
+ 
+: 실세계에 대한 비유가 객체지향의 다양한 측면을 이해하고 학습하는 데 매우 효과적이기 때문.
+
   → `객체`를 '스스로 생각하고 스스로 결정하는 *현실 세계의 생명체*에 비유하는 것'은 `상태`와 `행위`를 **캡슐화**하는 '소프트웨어 객체'의 **자율성**을 설명하는 데 효과적.
+
   → 현실 세계의 사람들이 '암묵적인 약속과 명시적인 계약을 기반으로 협력하며 목표를 달성해 나가는 과정'은 **메시지**를 주고 받으며 공동의 목표를 달성하기 위해 **협력**하는 객체들의 관계를 설명하는 데 적합.
+
   → '*실세계의 사물을 기반*으로 `소프트웨어 객체`를 **식별** 및 **구현**까지 이어간다는 개념'은 객체지향 설계의 핵심 사상인 **연결완전성**을 설명하는 데 적합.
 
 즉, `실세계의 모방`이라는 `객체지향의 개념`은 실무적 관점에서는 부적합하나, 객체지향이라는 용어에 담긴 기본 사상을 이해하고 학습하는 데는 매우 효과적.
@@ -51,15 +66,23 @@
 <br>
 
 - 커피를 주문 및 제조하는 과정: `역할`, `책임`, `협력`
+
   손님, 캐시어, 바리스타 사이의 암묵적인 **협력** 관계가 존재함.
+
   커피를 주문하는 손님, 주문을 받는 캐시어, 커피를 제조하는 바리스타라는 **역할**이 존재.
+
   손님, 캐시어, 바리스타는 주문한 커피를 손님에게 제공하기 위해 협력하는 과정에서 자신이 맡은 바 **책임**을 다함.
+
   → **`객체`**에서 가장 중요한 개념: `역할`, `책임`, `협력`
 
 ![](https://velog.velcdn.com/images/yjkang/post/476fc735-0e9d-47d7-87f5-56c3fa417f7b/image.png)
+
 위와 같은 협력 과정에서 알 수 있듯, `요청`과 `응답`을 통해 다른 사람과 **협력**함.
+
 → **`역할`**: 어떤 협력에 참여하는 특정한 사람이 협력 안에서 차지하는 **`책임`**이나 `의무`
+
 → **역할**이라는 단어는 의미적으로 **책임**이라는 개념을 내포함.
+
 즉, `특정한 역할`은 `특정한 책임`을 암시함.
 
 >"사람들이 협력을 위해 특정한 역할을 맡고 역할에 적합한 책임을 수행한다"
@@ -70,7 +93,8 @@
 >
 >3) **책임을 수행하는 방법**은 **자율적**으로 **선택**할 수 있음
 >>**`다형성`**: **동일한 요청**에 대해 **서로 다른 방식으로 응답**할 수 있는 능력
-('커피 제조'라는 동일한 요청을 받더라도, 바리스타의 역할을 수행하는 사람들마다 서로 다른 방식으로 요청을 처리할 수 있음)
+>>
+>>('커피 제조'라는 동일한 요청을 받더라도, 바리스타의 역할을 수행하는 사람들마다 서로 다른 방식으로 요청을 처리할 수 있음)
 >
 >4) 한 사람이 **동시에 여러 역할**을 **수행**할 수 있음
 >>한 사람이 캐시어와 바리스타를 동시에 할 수 있음
@@ -78,14 +102,20 @@
 위의 설명에서 `사람 == 객체`, `에이전트의 요청 == 메시지`, `에이전트가 요청을 처리하는 방법 == 메서드`
 
 **'협력의 핵심'**은 `특정한 책임을 수행하는 역할들 간`의 **연쇄적인 요청, 응답**을 통해 **목표**를 **달성**한다는 것
+
 → `객체들`은 **애플리케이션의 기능을 구현**하기 위해 `협력`함
+
 → 애플리케이션의 기능은 더 작은 책임으로 분할되고 책임은 적절한 역할을 수행할 수 있는 객체에 의해 수행됨
 
 <br>
 
 - **객체지향 설계**: 적절한 객체에게 적절한 책임을 할당하는 것에서 시작.
+
   이때 `책임`은 객체지향 설계의 품질을 결정하는 가장 중요한 요소(적절한 책임을 선택해야 함).
+
   `역할`은 협력에 참여하는 객체에 대한 일종의 페르소나(관련성이 높은 책임의 집합).
+
+
 >객체의 역할은 아래와 같은 특징을 지님.
 >
 >1) 여러 객체가 동일한 역할 수행 가능
@@ -94,21 +124,29 @@
 >4) 하나의 객체가 동시에 여러 역할을 수행할 수 있음
 
 - 객체지향 애플리케이션의 윤곽을 결정하는 것은 `역할`, `책임`, `협력`이지만, 실제로 협력에 참여하는 주체는 **`객체`**다.
-  인간의 세계에서 사람이 없으면 역할, 책임, 협력이 아무런 의미가 없듯, 객체가 존재하지 않는 객체지향 세계 역시 아무런 의미가 없다.
+
+-  인간의 세계에서 사람이 없으면 역할, 책임, 협력이 아무런 의미가 없듯, 객체가 존재하지 않는 객체지향 세계 역시 아무런 의미가 없다.
+
 
 - `객체`: 애플리케이션의 기능을 구현하기 위해 존재.
+
   일반적으로 **객체**는 **'다른 객체와의 협력'**을 통해 기능을 구현하게 됨.
 
 >객체가 갖춰야 할 사항
 >1) 객체는 충분히 **협력적**이어야 함
 >>객체는 다른 객체의 요청에 응답하고, 다른 객체에게 요청을 보낼 수 있어야 함.
-이때 어떤 방식으로 응답할 지는 객체 스스로 판단 및 결정.
-요청에 응할지 여부도 객체 스스로 결정할 수 있어야 함.
+>>
+>>이때 어떤 방식으로 응답할 지는 객체 스스로 판단 및 결정.
+>>
+>>요청에 응할지 여부도 객체 스스로 결정할 수 있어야 함.
 >
 >2) 객체는 충분히 **자율적**이어야 함
->>자기 스스로의 원칙에 따라 어떤 일을 하거나 자기 스스로를 통제하여 어떤 일을 하거나, 자기 스스로를 통제하여 절제하는 것(스스로 결정 & 책임)
+>>자기 스스로의 원칙에 따라 어떤 일을 하거나 자기 스스로를 통제하여 어떤 일을 하거나, 자기 스스로를 통제하여 절제하는 것
+>>
+>>(스스로 결정 & 책임)
 
 `객체 공동체`에 속한 `객체`들은 **공동의 목표를 달성**하기 위해 **협력에 참여**
+
 **BUT** 스스로의 결정과 판단에 따라 행동하는 **자율적**인 존재임.
 
 - `객체지향 설계`의 묘미는 '다른 객체와 조화롭게 협력할 수 있을 만큼' 충분히 **개방적**인 동시에 '협력에 참여하는 방법을 스스로 결정할 수 있을 만큼' 충분히 **자율적**인 `객체들의 공동체`를 설계하는 데 있음
@@ -118,82 +156,121 @@
 ## 협력 속에 사는 객체
 ### 상태와 행동을 함께 지닌 자율적인 객체
 - 흔히 객체를 **상태**와 **행동**을 함께 지닌 실체라고 정의함.
+
   이 말뜻은, 객체가 협력에 참여하기 위해 어떠한 행동을 해야 한다면 그 행동을 하는 데 필요한 상태도 함께 지니고 있어야 한다는 것.
+
   (바리스타가 커피 제조 방법을 모르는 게 말이 안 되는 것처럼, 객체가 어떤 행동을 하기 위해 필요한 상태를 알지 못한다는 것 역시 말이 안 된다)
+
   → `객체`가 **협력에 참여하는 과정** 속에서 **스스로 판단 및 결정**하는 **자율적인 존재**가 되기 위해선 필요한 **`행동`**과 **`상태`**를 함께 지니고 있어야 함.
 
 - 객체의 자율성은 객체의 내부와 외부를 명확하게 구분하는 것으로부터 나옴.
+
   객체의 사적인 부분은 객체 스스로 관리(외부에서 일체 간섭할 수 없도록 차단), 객체 외부에서는 접근이 허락된 수단을 통해서만 객체와 의사소통해야 함.
+
+
 - `객체`는 `다른 객체`가 **무엇(what)**을 수행하는 지는 알 수 있지만, **어떻게(how)** 수행하는 지에 대해서는 알 수 없음.
 
+
 - `객체`는 **행동을 위해 필요한 상태를 포함**(바리스타는 커피 제조 방법을 기억하고 있음) + **특정한 행동을 수행하는 방법을 스스로 결정**(바리스타는 자신이 알고 있는 방법에 따라 커피를 제조)
+
   → 즉, `객체`는 **상태**와 **행위**를 **`하나의 단위`**로 묶는 **자율적**인 존재.
 
 <br>
 
 - 과거의 전통적인 개발 방법: 데이터와 프로세스를 엄격히 구분
 - 객체지향: 데이터와 프로세스를 객체라는 하나의 틀 안에 함께 묶어 놓음으로써 객체의 자율성을 보장
+
   → `자율적인 객체로 구성된 공동체`는 '유지보수가 쉽고 재사용이 용이한 시스템'을 구축할 수 있는 가능성을 제시함
 
 <br>
 
 객체지향의 세계에서는 오직 한 가지 의사소통 수단만이 존재: **메시지**
+
 \- `메시지`를 `전송`한다: 한 객체가 다른 객체에게 `요청하는 것`.
+
 \- `메시지`를 `수신`한다: 한 객체가 다른 객체로부터 `요청을 받는 것`.
+
 → 객체지향 세계에서 **`협력`**: **메시지를 전송하는 객체(송신자 sender)**와 **메시지를 수신하는 객체(수신자 receiver)** 사이의 관계로 구성됨
 
 <br>
 
 ### 메서드와 자율성
 - **메서드(method)**: 객체가 수신된 메시지를 처리하는 방법
+
   객체지향 프로그래밍 언어에서 메서드는 클래스 안에 포함된 함수 또는 프로시저를 통해 구현됨
+
   따라서 어떤 객체에게 메시지를 전송하면 결과적으로 메시지에 대응되는 특정 메서드가 실행됨
 
+
+
 - `메시지를 수신한 객체`가 '실행 시간'에 `메서드를 선택`할 수 있음
+
   → 객체지향 프로그래밍 언어와 다른 프로그래밍 언어를 구분 짓는 핵심 특징 중 하나.
+
   (프로시저 호출에 대한 실행 코드를 컴파일 시간에 결정하는 절차적인 언어와 확연히 구분되는 특징임)
 
+
+
+
 - `메시지`와 `메서드`의 분리: 객체의 협력에 참여하는 객체들 간의 자율성을 증진시킴.
+
   \- 바리스타에게 전달된 커피 제조 요청: **메시지**
+
   \- 커피를 제조하는 구체적인 방법: **메서드**
 
+
 **메시지**(외부의 요청이 무엇인지 표현)와 **메서드**(요청을 처리하기 위한 구체적인 방법)를 분리하는 것은 객체의 자율성을 높이는 핵심 메커니즘.
+
 → `캡슐화`와도 깊이 관련돼 있음
 
 <br>
 
 ## 객체지향의 본질
 >1) **객체지향**이란 `시스템`을 상호작용하는 **자율적인 객체들의 공동체**로 바라보고, 객체를 이용해 시스템을 분할하는 방법이다.
-2) **자율적인 객체**란 **상태**와 **행위**를 함께 지니며, 스스로 자기 자신을 책임지는 객체를 의미한다.
-3) **객체**는 '시스템의 행위를 구현'하기 위해 다른 객체와 **협력**한다. 각 객체는 협력 내에서 정해진 **역할**을 수행하며, 역할은 관련된 **책임**의 집합이다.
-4) 객체는 다른 객체와 협력하기 위해 메시지를 전송하고, **메시지**를 수신한 객체는 메시지를 처리하는 데 적합한 **메서드**를 자율적으로 선택한다.
+>2) **자율적인 객체**란 **상태**와 **행위**를 함께 지니며, 스스로 자기 자신을 책임지는 객체를 의미한다.
+>3) **객체**는 '시스템의 행위를 구현'하기 위해 다른 객체와 **협력**한다. 각 객체는 협력 내에서 정해진 **역할**을 수행하며, 역할은 관련된 **책임**의 집합이다.
+>4) 객체는 다른 객체와 협력하기 위해 메시지를 전송하고, **메시지**를 수신한 객체는 메시지를 처리하는 데 적합한 **메서드**를 자율적으로 선택한다.
 
 <br>
 
 ### 객체를 지향하라
 - **클래스(class)**: 객체지향 프로그래밍 언어의 관점에서 매우 중요한 구성요소(construct)인 것은 분명하나, 객체지향의 핵심을 이루는 중심 개념이라고 말하기에는 무리가 있다.
 
+
 `자바스크립트`같은 '프로토타입 기반의 객체지향 언어'에서는 **클래스가 존재하지 않으며**, 오직 **객체만이 존재**한다.
+
 '프로토타입 기반의 객체지향 언어'에서는 `상속` 역시 클래스가 아닌 객체 간의 위임(delegation) 메커니즘을 기반으로 한다.
 
-지나치게 클래스를 강조하는 프로그래밍 언어적인 관점은 객체의 캡슐화를 저해하고, 클래스를 서로 강하게 결합시킨다. `애플리케이션`을 **협력하는 객체들의 공동체**가 아닌, '`클래스로 구성된 설계도`로 보는 관점'은 유연하고 확장 가능한 애플리케이션의 구축을 방해한다.
+지나치게 클래스를 강조하는 프로그래밍 언어적인 관점은 객체의 캡슐화를 저해하고, 클래스를 서로 강하게 결합시킨다.
+
+`애플리케이션`을 **협력하는 객체들의 공동체**가 아닌, '`클래스로 구성된 설계도`로 보는 관점'은 유연하고 확장 가능한 애플리케이션의 구축을 방해한다.
+
+<br>
+
 
 - 훌륭한 객체지향 설계자가 되기 위해 거쳐야 할 첫 번째 도전:
+
   `코드를 담는 클래스의 관점` → `메시지를 주고받는 객체의 관점`으로 사고의 중심을 전환하는 것.
+
   중요한 것은 어떤 클래스가 필요한가가 아니라 **어떤 객체들이 어떤 메시지를 주고받으며 협력하는가**이다.
+
   (클래스는 객체들의 협력 관계를 코드로 옮기는 도구에 불과함)
 
 <br>
 
 **객체지향의 핵심**은 `클래스`(X)
+
 '적절한 책임을 수행'하는 역할 간의 **`유연하고 견고한 협력 관계를 구축하는 것`**(O)
+
 → 클래스는 협력에 참여하는 객체를 만드는 데 필요한 구현 메커니즘일 뿐이다.
+
 이는 `클래스`가 중요하지 않다는 뜻이 아니라, 단지 `협력 구조와 책임을 식별하는 것`에 비해 상대적으로 덜 중요하다는 뜻이다.
 
 **객체지향의 중심**에는 `클래스`가 아닌 `객체`가 위치하며, 중요한 것은 `클래스들의 '정적인 관계'`가 아니라 `메시지를 주고받는 객체들의 '동적인 관계'`다.
 
 >`클래스`의 구조와 메서드에 집중 (X)
-**`객체`**의 **역할**, **책임**, **협력**에 집중 (O)
+>
+>**`객체`**의 **역할**, **책임**, **협력**에 집중 (O)
 
 **객체지향**은 **객체를 지향**하는 것이지, 클래스를 지향하는 것이 아니다.
 
