add: 객체지향의 사실과 오해 4챕터 문서, 영상 추가

--- a/객체지향의_사실과_오해_4챕터.md
+++ b/객체지향의_사실과_오해_4챕터.md
@@ -392,6 +392,6 @@
 
 ---
 
-💬 [스터디 진행 기록(객체지향의 사실과 오해_4챕터_250102)]()
+💬 [스터디 진행 기록(객체지향의 사실과 오해_4챕터_250102)](https://flat-argument-d72.notion.site/250102-_4-16e7faba9f3f80039d79d0e021696363?pvs=4)
 
-🎬 [스터디 진행 영상(객체지향의 사실과 오해_4챕터_250102)]()
+🎬 [스터디 진행 영상(객체지향의 사실과 오해_4챕터_250102)](https://www.youtube.com/watch?v=t9o8vDQrTus)
